[project]
name = "hackernews-comment-mindmap-feed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hackernews",
    "loguru>=0.7.3",
    "pydantic>=2.11.3",
    "smolllm>=0.2.3",
]

[tool.uv.sources]
hackernews = { git = "https://github.com/rocry/hackernews" }

[tool.ruff.lint]
extend-select = ["I"]
